--- a/static/styles/default.css
+++ b/static/styles/default.css
@@ -7,7 +7,7 @@ body {
     font-family: "Audiowide", sans-serif;
 	background: #252424;
 	color: #ccc ;
-    background-image: url(images/tileable.png);
+    background-image: url(images/tileable2.png);
     background-repeat: repeat-y;
     background-size: 100%;
 }
