--- a/layouts/partials/sidenav.html
+++ b/layouts/partials/sidenav.html
@@ -1,8 +1,9 @@
 <div class="sidenav">
     <a href="/">Home</a>
     <div class = "bottom_half_sidenav":>
-        <a href="/accolades">Accolades</a>
         <a href="/resume">Resume</a>
+        <a href="/preprints">Preprints</a>
+        <a href="/accolades">Accolades</a>
     </div>
 </div>
 
